# WhizzGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  premake5.lua
include/WhizzGL/: WhizzGL.h
src/: WhizzGL.c  test.c
